# Gittyup

./: CMakeLists.txt  gitaheadPatchesLibGit2.txt
.github/workflows/: build.yml
dep/: CMakeLists.txt
dep/build-libgit2-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
dep/build-libgit2-Desktop-Debug/.qtc_clangd/: compile_commands.json
dep/build-libgit2-Desktop-Debug/libgit2/: CTestTestfile.cmake  cmake_install.cmake  git2_cli  libgit2.pc
dep/build-libgit2-Desktop-Debug/libgit2/src/: cmake_install.cmake
dep/build-libgit2-Desktop-Debug/libgit2/src/cli/: cmake_install.cmake
dep/build-libgit2-Desktop-Debug/libgit2/src/libgit2/: cmake_install.cmake
dep/build-libgit2-Desktop-Debug/libgit2/src/util/: cmake_install.cmake
dep/build-libgit2-Desktop-Debug/libgit2/tests/: CTestTestfile.cmake  cmake_install.cmake
dep/build-libgit2-Desktop-Debug/libgit2/tests/headertest/: CTestTestfile.cmake  cmake_install.cmake  headertest
dep/build-libgit2-Desktop-Debug/libgit2/tests/libgit2/: .clarcache  CTestTestfile.cmake  (+3 more)
dep/libgit2/: CMakeLists.txt  rebaseGittyupLibgit2.sh
src/app/: Application.cpp  Application.h  CMakeLists.txt  Theme.cpp
src/git/: CMakeLists.txt  Config.cpp  Diff.cpp  Index.cpp  Patch.cpp  Remote.cpp  Remote.h  Repository.cpp  Repository.h  Submodule.cpp
src/ui/: CommitList.cpp  DetailView.cpp  DoubleTreeWidget.cpp  RepoView.cpp
test/: CMakeLists.txt  EditorLineInfos.cpp  Test.cpp  Test.h  bare_repo.cpp  branches_panel.cpp  index.cpp  init_repo.cpp  linux-runner.sh  merge.cpp  new_branch_dialog.cpp
(+1132 files in other folders)
