add_library(
  git
  AnnotatedCommit.cpp
  Blame.cpp
  Blob.cpp
  Branch.cpp
  Buffer.cpp
  Command.cpp
  Commit.cpp
  Config.cpp
  Diff.cpp
  Filter.cpp
  FilterList.cpp
  Id.cpp
  Index.cpp
  Object.cpp
  Patch.cpp
  Rebase.cpp
  Reference.cpp
  Remote.cpp
  Repository.cpp
  Result.cpp
  RevWalk.cpp
  Signature.cpp
  Submodule.cpp
  Tag.cpp
  TagRef.cpp
  Tree.cpp)
message(FATAL_ERROR ${LIBGIT2_SYSTEM_LIBS})
target_link_libraries(git
	#${LIBGIT2_DEPENDENCY_OBJECTS}
  libgit2
  #${LIBGIT2_SYSTEM_LIBS}
  #libgit2package
  Qt5::Core
  Qt5::Network
)

set_target_properties(git PROPERTIES AUTOMOC ON)
